--- a/.github/workflows/GCP-TF-WF01.yml
+++ b/.github/workflows/GCP-TF-WF01.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, Srinivas Good Morning!
 
+      -name: another run
+       run: echo "All The Best"
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
