--- a/.github/workflows/GCP-TF-WF01.yml
+++ b/.github/workflows/GCP-TF-WF01.yml
@@ -30,7 +30,7 @@ jobs:
         run: echo Hello, Srinivas Good Morning!
 
       -name: another run
-       run: echo "All The Best"
+       run: echo All The Best
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
