--- a/.github/workflows/GCP-TF-WF01.yml
+++ b/.github/workflows/GCP-TF-WF01.yml
@@ -28,7 +28,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         #run: echo Hello, Srinivas Good Morning!
-        run: echo hostname
+        run: hostname
 
       
       # Runs a set of commands using the runners shell
