--- a/.github/workflows/GCP-TF-WF01.yml
+++ b/.github/workflows/GCP-TF-WF01.yml
@@ -36,3 +36,8 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+	        cd  /terraform/poc/gcp-tf-iac
+	        git pull
+	        cp /terraform/poc/gcp-tf-iac/main.tf  /terraform/poc/
+	        cd /terraform/poc/
+	        terraform init
