--- a/.github/workflows/GCP-TF-WF01.yml
+++ b/.github/workflows/GCP-TF-WF01.yml
@@ -35,5 +35,5 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
-          echo test, and deploy your project.
-	        cd  /terraform/poc/gcp-tf-iac
+          echo test, and deploy your project,
+	        cd  /terraform/poc/gcp-tf-iac.
