--- a/.github/workflows/GCP-TF-WF01.yml
+++ b/.github/workflows/GCP-TF-WF01.yml
@@ -36,4 +36,4 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project,
-	        cd  /terraform/poc/gcp-tf-iac.
+	        hostname
