--- a/.github/workflows/GCP-TF-WF01.yml
+++ b/.github/workflows/GCP-TF-WF01.yml
@@ -30,7 +30,10 @@ jobs:
         #run: echo Hello, Srinivas Good Morning!
         run: hostname
 
-      
+      - name: Run a on-line script
+        #run: echo Hello, Srinivas Good Morning!
+        run: hostname
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
