--- a/.github/workflows/GCP-TF-WF01.yml
+++ b/.github/workflows/GCP-TF-WF01.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run a on-line script
         #run: echo Hello, Srinivas Good Morning!
-        run: hostname
+        run: cd  /terraform/poc/gcp-tf-iac
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
