--- a/.github/workflows/GCP-TF-WF01.yml
+++ b/.github/workflows/GCP-TF-WF01.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Run a on-line script
         #run: echo Hello, Srinivas Good Morning!
         run: cd  /terraform/poc/gcp-tf-iac
+        run: git pull
+
+      
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
