--- a/.github/workflows/GCP-TF-WF01.yml
+++ b/.github/workflows/GCP-TF-WF01.yml
@@ -33,7 +33,10 @@ jobs:
       - name: Run a on-line script
         #run: echo Hello, Srinivas Good Morning!
         run: cd  /terraform/poc/gcp-tf-iac
-        run: git pull
+
+      - name: Run a on-line script
+        #run: echo Hello, Srinivas Good Morning!
+        run: pwd
 
       
 
