--- a/.github/workflows/GCP-TF-WF01.yml
+++ b/.github/workflows/GCP-TF-WF01.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Run a one-line script
         #run: echo Hello, Srinivas Good Morning!
         run: hostname
+        run: pwd
 
       - name: Run a on-line script
         #run: echo Hello, Srinivas Good Morning!
